<<<<<<< HEAD
<<<<<<< HEAD
<resources>    <string name="app_name">FinUCAB</string>    <string name="user_name">Nombre de usuario</string>    <string name="user_password">Contrasena</string>    <string name="sign_up">Registrarse</string>    <string name="sign_in">Ingresar</string>    <string name="forgot_password">¿Olvidó su contraseña?</string>    <string name="my_profile">Mi Perfil</string>    <!-- TODO: Remove or change this placeholder text -->    <string name="hello_blank_fragment">Hello blank fragment</string>    <string name="payment"> Pagos</string>    <string name="category"> Categorias</string>    <string name="budget"> Presupuestos</string>    <string name="pays"> Pagos</string>    <string name="settings"> Configuracion</string>    <string name="singout"> Cerrar Sesion</string>    <string name="titulo_tab_total">TOTAL</string>    <string name="titulo_tab_ganancias">GANANCIAS</string>    <string name="titulo_tab_gastos">GASTOS</string>    <string name="title_activity_pre">Pre</string>    /////////////////////////////////// STRING USADO EN AGREGAR    PRESUPUESTO//////////////////////////////////    //////// TEXT VIEW Y BUTTONS ////////////    <string name="nombrePresupuesto">Nombre del Presupuesto</string>    <string name="categoria">Categoría</string>    <string name="monto">Monto</string>    <string name="unico">Único</string>    <string name="recurrente">Recurrente</string>    <string name="meses">¿Cada cuántos meses?</string>    <string name="agregar">Agregar</string>    <string name="aceptar">Aceptar</string>    <string name="volver">Volver</string>    <string name="tipoTransaccion">Tipo Transaccion</string>    <string name="descripcion">Descripcion</string>    <string name="agregarDescripcion">Agregue una descripcion</string>    <string name="campoObligatorio">Campo obligatorio</string>    <string name="agregarCategoria">Agregar una categoria</string>    <string name="campoObligatorioDes">Campo obligatorio</string>    <string name="habilitado">Habilitado</string>    <string name="deshabilitado">Deshabilitado</string>    <string name="ingreso">Ingreso</string>    <string name="egreso">Egreso</string>    ///////////// EDIT TEXT /////////////    <string name="indiqueNombre">Indique el nombre del Presupuesto</string>    <string name="indiqueCategoria">Indique la Categoria</string>    <string name="indiqueMonto">Indique el Monto</string>    <string name="escribirCategoria">Escriba una categoria</string>    <string name="indiqueMeses">Indique los meses de recurrencia</string>    <string name="indiqueDescripccion">Indique una descripccion</string>    <string name="escribirDescripcion">Escriba una descripcion</string>    ////////////// SPINNER /////////////    <string name="categoria_prompt">Indique la Categoria</string>    <string-array name="categoryArray">        <item>-</item>        <item>Libreria</item>        <item>Restaurant</item>        <item>Sueldo</item>        <item>Supermercado</item>    </string-array>    <string name="tipoTransaccion_prompt">Indique el Tipo de Transaccion</string>    <string-array name="tipoTransaccionArray">        <item>-</item>        <item>Ingreso</item>        <item>Gasto</item>    </string-array>    <!--MENU DE PRESUPUESTO-->    <string name="opcionEliminar">Eliminar</string>    <string name="opcionModificar">Modificar</string></resources>
=======
<resources>    <string name="app_name">FinUCAB</string>    <string name="user_name">Nombre de usuario</string>    <string name="user_password">Contraseña</string>    <string name="sign_up">Registrarse</string>    <string name="answer">Respuesta secreta</string>    <string name="sign_in">Ingresar</string>    <string name="forgot_password">¿Olvidó su contraseña?</string>    <string name="my_profile">Mi Perfil</string>    <!-- TODO: Remove or change this placeholder text -->    <string name="hello_blank_fragment">Hello blank fragment</string>    <string name="payment"> Pagos</string>    <string name="category"> Categorias</string>    <string name="budget"> Presupuestos</string>    <string name="pays"> Pagos</string>    <string name="settings"> Configuracion</string>    <string name="singout"> Cerrar Sesion</string>    <string name="titulo_tab_total">TOTAL</string>    <string name="titulo_tab_ganancias">GANANCIAS</string>    <string name="titulo_tab_gastos">GASTOS</string>    <string name="title_activity_pre">Pre</string>    /////////////////////////////////// STRING USADO EN AGREGAR    PRESUPUESTO//////////////////////////////////    //////// TEXT VIEW Y BUTTONS ////////////    <string name="nombrePresupuesto">Nombre del Presupuesto</string>    <string name="categoria">Categoría</string>    <string name="monto">Monto</string>    <string name="unico">Único</string>    <string name="recurrente">Recurrente</string>    <string name="meses">¿Cada cuántos meses?</string>    <string name="agregar">Agregar</string>    <string name="aceptar">Aceptar</string>    <string name="volver">Volver</string>    <string name="tipoTransaccion">Tipo Transaccion</string>    <string name="descripcion">Descripcion</string>    ///////////// EDIT TEXT /////////////    <string name="indiqueNombre">Indique el nombre del Presupuesto</string>    <string name="indiqueCategoria">Indique la Categoria</string>    <string name="indiqueMonto">Indique el Monto</string>    <string name="agregarCategoria">Agregar una categoria</string>    <string name="campoObligatorio">*Campo obligatorio</string>    <string name="escribirCategoria">Escriba una categoria</string>    <string name="indiqueMeses">Indique los meses de recurrencia</string>    <string name="indiqueDescripccion">Indique una descripccion</string>    ////////////// SPINNER /////////////    <string name="categoria_prompt">Indique la Categoria</string>    <string-array name="categoryArray">        <item>-</item>        <item>Libreria</item>        <item>Restaurant</item>        <item>Sueldo</item>        <item>Supermercado</item>    </string-array>    <string name="tipoTransaccion_prompt">Indique el Tipo de Transaccion</string>    <string-array name="tipoTransaccionArray">        <item>-</item>        <item>Ingreso</item>        <item>Gasto</item>    </string-array>    <!--MENU DE PRESUPUESTO-->    <string name="opcionEliminar">Eliminar</string>    <string name="opcionModificar">Modificar</string></resources>
>>>>>>> origin/modulo1Erbin
=======
<resources>    <string name="app_name">FinUCAB</string>    <string name="user_name">Nombre de usuario</string>    <string name="user_password">Contrasena</string>    <string name="sign_up">Registrarse</string>    <string name="sign_in">Ingresar</string>    <string name="forgot_password">¿Olvidó su contraseña?</string>    <string name="my_profile">Mi Perfil</string>    <!-- TODO: Remove or change this placeholder text -->    <string name="hello_blank_fragment">Hello blank fragment</string>    <string name="payment"> Pagos</string>    <string name="category"> Categorias</string>    <string name="budget"> Presupuestos</string>    <string name="pays"> Pagos</string>    <string name="settings"> Configuracion</string>    <string name="singout"> Cerrar Sesion</string>    <string name="titulo_tab_total">TOTAL</string>    <string name="titulo_tab_ganancias">GANANCIAS</string>    <string name="titulo_tab_gastos">GASTOS</string>    <string name="title_activity_pre">Pre</string>    /////////////////////////////////// STRING USADO EN AGREGAR    PRESUPUESTO//////////////////////////////////    //////// TEXT VIEW Y BUTTONS ////////////    <string name="nombrePresupuesto">Nombre del Presupuesto</string>    <string name="categoria">Categoría</string>    <string name="monto">Monto</string>    <string name="unico">Único</string>    <string name="recurrente">Recurrente</string>    <string name="meses">¿Cada cuántos meses?</string>    <string name="agregar">Agregar</string>    <string name="aceptar">Aceptar</string>    <string name="volver">Volver</string>    <string name="tipoTransaccion">Tipo Transaccion</string>    <string name="descripcion">Descripcion</string>    <string name="agregarDescripcion">Agregue una descripcion</string>    <string name="campoObligatorio">Campo obligatorio</string>    <string name="agregarCategoria">Agregar una categoria</string>    <string name="campoObligatorioDes">Campo obligatorio</string>    <string name="habilitado">Habilitado</string>    <string name="deshabilitado">Deshabilitado</string>    <string name="ingreso">Ingreso</string>    <string name="egreso">Egreso</string>    <string name="exportar">Exportar</string>    ///////////// EDIT TEXT /////////////    <string name="indiqueNombre">Indique el nombre del Presupuesto</string>    <string name="indiqueCategoria">Indique la Categoria</string>    <string name="indiqueMonto">Indique el Monto</string>    <string name="escribirCategoria">Escriba una categoria</string>    <string name="indiqueMeses">Indique los meses de recurrencia</string>    <string name="indiqueDescripccion">Indique una descripccion</string>    <string name="escribirDescripcion">Escriba una descripcion</string>    ////////////// SPINNER /////////////    <string name="categoria_prompt">Indique la Categoria</string>    <string-array name="categoryArray">        <item>-</item>        <item>Libreria</item>        <item>Restaurant</item>        <item>Sueldo</item>        <item>Supermercado</item>    </string-array>    <string name="tipoTransaccion_prompt">Indique el Tipo de Transaccion</string>    <string-array name="tipoTransaccionArray">        <item>-</item>        <item>Ingreso</item>        <item>Gasto</item>    </string-array>    <!--MENU DE PRESUPUESTO-->    <string name="opcionEliminar">Eliminar</string>    <string name="opcionModificar">Modificar</string></resources>
>>>>>>> origin/Develop
