<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/fragment_agregar_transacion"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    android:background="#0895E0"

    android:titleTextColor="#000">


    <Spinner

        android:id="@+id/categoriaSpinner"

        android:layout_width="0dp"

        android:layout_height="45dp"

        android:layout_marginEnd="16dp"

        android:layout_marginLeft="16dp"

        android:layout_marginRight="16dp"

        android:layout_marginStart="16dp"

        android:layout_marginTop="233dp"

        android:background="@drawable/spinner"

        android:entries="@array/categoryArray"

        android:prompt="@string/categoria_prompt"

        android:textSize="14sp"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="1.0"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Spinner

        android:id="@+id/tipoTransaccionSpinner"

        android:layout_width="0dp"

        android:layout_height="45dp"

        android:layout_marginEnd="16dp"

        android:layout_marginLeft="16dp"

        android:layout_marginRight="16dp"

        android:layout_marginStart="16dp"

        android:layout_marginTop="145dp"

        android:background="@drawable/spinner"

        android:entries="@array/tipoTransaccionArray"

        android:prompt="@string/tipoTransaccion_prompt"

        android:textSize="14sp"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="1.0"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView

        android:id="@+id/montoTextView"

        android:layout_width="0dp"

        android:layout_height="wrap_content"

        android:textColor="#fff"

        android:textSize="20sp"

        android:text="@string/monto"

        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="16dp"

        app:layout_constraintHorizontal_bias="1.0" />
    <TextView

        android:id="@+id/tipoTransaccionTextView"

        android:layout_width="0dp"

        android:layout_height="wrap_content"

        android:textColor="#fff"

        android:textSize="20sp"

        android:text="@string/tipoTransaccion"

        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="104dp"

        app:layout_constraintHorizontal_bias="1.0" />
    <TextView

        android:id="@+id/categoryTextView"

        android:layout_width="0dp"

        android:layout_height="wrap_content"

        android:textColor="#fff"

        android:textSize="20sp"

        android:text="@string/categoria"

        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="199dp"

        app:layout_constraintHorizontal_bias="1.0" />
    <TextView

        android:id="@+id/descripcionTextView"

        android:layout_width="0dp"

        android:layout_height="wrap_content"

        android:textColor="#fff"

        android:textSize="20sp"

        android:text="@string/descripcion"

        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="286dp"

        app:layout_constraintHorizontal_bias="1.0" />
    <EditText

        android:id="@+id/montoEditText"

        android:layout_width="0dp"

        android:layout_height="47dp"

        android:layout_marginLeft="16dp"

        android:layout_marginRight="16dp"

        android:hint="@string/indiqueMonto"

        android:background="@drawable/rounded_white_border"

        android:textSize="14sp"

        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="57dp"

        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />
    <EditText

        android:id="@+id/descripccionEditText"

        android:layout_width="0dp"

        android:layout_height="45dp"

        android:hint="@string/indiqueDescripccion"

        android:layout_marginLeft="16dp"

        android:layout_marginRight="16dp"

        android:background="@drawable/rounded_white_border"

        android:textSize="14sp"

        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="318dp"

        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />
    <Button

        android:id="@+id/acceptButton"

        android:layout_width="126dp"

        android:layout_height="0dp"

        android:text="@string/aceptar"

        android:textSize="14sp"

        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginTop="447dp"

        app:layout_constraintHorizontal_bias="0.937" />

</android.support.constraint.ConstraintLayout>

