<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ucab.fin.finucab.activity.InicioActivity">

    <ImageView
        android:id="@+id/appIconImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        app:srcCompat="@mipmap/main_icon" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_below="@+id/appIconImageView"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_white_border"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/userPwdEditText"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_below="@+id/userNameEditText"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_white_border"
        android:ems="10"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/signUpButton"
        android:background="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_below="@+id/signInButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/signInButton"
        android:background="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userPwdEditText"
        android:layout_marginTop="52dp"
        android:text="@string/sign_in"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/forgotPwdTextView"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/forgot_password"
        android:textColor="@android:color/background_light"
        android:layout_below="@+id/userPwdEditText"
        android:layout_toRightOf="@+id/textView9"
        android:layout_toEndOf="@+id/textView9" />

    <TextView
        android:text="@string/contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userNameEditText"
        android:layout_alignLeft="@+id/userPwdEditText"
        android:layout_alignStart="@+id/userPwdEditText"
        android:layout_marginTop="10dp"
        android:id="@+id/textView9"
        android:textColor="@color/colorAccent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:text="@string/usuario"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/appIconImageView"
        android:layout_alignLeft="@+id/userNameEditText"
        android:layout_alignStart="@+id/userNameEditText"
        android:layout_marginTop="10dp"
        />
</RelativeLayout>
