<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_agregar_categoria"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0895E0">

    <TextView

        android:id="@+id/agregarTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="20sp"
        android:text="@string/agregarCategoria"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="54dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView

        android:id="@+id/DescripcionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="20sp"
        android:text="@string/agregarDescripcion"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="161dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText

        android:id="@+id/AgregarcategoriaEditText"

        android:layout_width="0dp"

        android:layout_height="47dp"

        android:layout_marginLeft="16dp"

        android:layout_marginRight="16dp"

        android:hint="@string/escribirCategoria"

        android:background="@drawable/rounded_white_border"

        android:textSize="14sp"

        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="96dp"

        app:layout_constraintHorizontal_bias="0.0"

        android:layout_marginStart="16dp"

        android:layout_marginEnd="16dp" />

    <EditText

        android:id="@+id/AddDescripcionEditText"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/escribirDescripcion"
        android:background="@drawable/rounded_white_border"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="197dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <Button

        android:id="@+id/acceptButton"
        android:layout_width="126dp"
        android:layout_height="0dp"
        android:text="@string/aceptar"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="436dp"
        app:layout_constraintHorizontal_bias="0.937" />

    <Switch
        android:id="@+id/habilitarSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="295dp"

        android:text="Estado"
        android:textOff="habilitado"
        android:textOn="deshabilitado"
        />


    <Switch
        android:id="@+id/tipoSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="354dp"

        android:text="Tipo"
        android:textOff="ingreso"
        android:textOn="egreso"/>

    <TextView

        android:id="@+id/estadoTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="295dp"
        android:text="@string/estado"
        android:textColor="#fff"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/TipoTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="354dp"
        android:text="@string/tipo"
        android:textColor="#fff"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>

